# twitch-python-wrapper

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
api/: objects.py
src/: shared_enums.py  shared_objects.py
src/api/: client.py  enums.py  objects.py
src/api/endpoint_groups/: ads.py  analytics.py  bits.py  ccls.py  channel_points.py  channels.py  charity.py  chat.py  clips.py  conduits.py  entitlements.py  eventsub.py  extensions.py  games.py  goals.py  hype_train.py  moderation.py  polls.py  predictions.py  raids.py  schedule.py  search.py  streams.py  subscriptions.py  tags.py  teams.py  users.py  videos.py  whispers.py
src/event/: client.py  enums.py  objects.py
src/twitch_py_wrapper/: objects.py  shared_enums.py  shared_objects.py
src/twitch_py_wrapper/api/: client.py  enums.py  objects.py
src/twitch_py_wrapper/api/endpoint_groups/: ads.py  analytics.py  bits.py  ccls.py  channel_points.py  channels.py  charity.py  chat.py  clips.py  conduits.py  entitlements.py  eventsub.py  extensions.py  games.py  goals.py  hype_train.py  moderation.py  polls.py  predictions.py  raids.py  schedule.py  search.py  streams.py  subscriptions.py  teams.py  users.py  videos.py  whispers.py
src/twitch_py_wrapper/event/: client.py  objects.py
src/twitch_py_wrapper/eventsub/: client.py  enums.py  objects.py
src/twitch_python_wrapper/: objects.py
src/twitch_python_wrapper/api/: client.py  enums.py  objects.py
src/twitch_python_wrapper/eventsub/: client.py  enums.py  objects.py
tests/: test_api_client.py
(+28 files in other folders)
